# rust-qt-binding-generator

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING.EXCEPTION  Cargo.toml  ChangeLog  Messages.sh  README.md  bindings.json  design.txt  dev  flake.nix  org.kde.rust_qt_binding_generator.appdata.xml  org.kde.rust_qt_binding_generator.desktop  shell.nix
cmake/: FindCargo.cmake
common-rust/: Cargo.toml
common-rust/src/: implementation.rs  interface.rs  lib.rs  testimplementation.rs  testinterface.rs  types.rs
demo/: CMakeLists.txt  Messages.sh  bindings.json  chart.qml  demo-qtquick2.qml  demo.qml  fibonacci.json  processes.json  resource_file.qrc  time_series.json  tree.json
demo/qml/: DataAndChart.qml  Fibonacci.qml  Fibonacci2.qml  FibonacciList.qml  FibonacciList2.qml  FibonacciListKirigami.qml  FileTreeView.qml  FileTreeView2.qml  FileTreeViewKirigami.qml  ProcessesTree.qml  StyleSwitcher.qml  StyleSwitcher2.qml  chart.qml  demo-kirigami2.qml  demo-qtquick2.qml  demo.qml
demo/rust/: Cargo.toml
demo/rust/src/: fibonacci_implementation.rs  fibonacci_interface.rs  fibonacci_types.rs  implementation.rs  interface.rs  lib.rs  processes_implementation.rs  processes_interface.rs  testimplementation.rs  testinterface.rs  time_series_implementation.rs  time_series_interface.rs  types.rs
demo/rust/src/implementation/: demo.rs  fibonacci.rs  file_system_tree.rs  mod.rs  processes.rs  time_series.rs
demo/src/: Bindings.cpp  Bindings.h  DemoObject.cpp  DemoObject.h  Fibonacci.cpp  Fibonacci.h  Processes.cpp  Processes.h  SortedModel.cpp  SortedModel.h  TimeSeries.cpp  TimeSeries.h  Tree.cpp  Tree.h  main.cpp  tmp.cpp  tmp.h
docker/: Dockerfile  docker-bash-session.sh
examples/todos/: CMakeLists.txt  README.md  bindings.json  main.qml
examples/todos/cmake/: FindRust.cmake
examples/todos/rust/: Cargo.toml
examples/todos/rust/src/: implementation.rs  interface.rs
examples/todos/src/: Bindings.cpp  Bindings.h  main.cpp
poqm/ca/: rqbgdemo_qt.po
poqm/ca@valencia/: rqbgdemo_qt.po
poqm/cs/: rqbgdemo_qt.po
poqm/de/: rqbgdemo_qt.po
poqm/en_GB/: rqbgdemo_qt.po
poqm/eo/: rqbgdemo_qt.po
poqm/es/: rqbgdemo_qt.po
poqm/et/: rqbgdemo_qt.po
poqm/eu/: rqbgdemo_qt.po
poqm/fi/: rqbgdemo_qt.po
poqm/fr/: rqbgdemo_qt.po
poqm/gl/: rqbgdemo_qt.po
poqm/it/: rqbgdemo_qt.po
poqm/ja/: rqbgdemo_qt.po
poqm/ka/: rqbgdemo_qt.po
poqm/ko/: rqbgdemo_qt.po
poqm/lt/: rqbgdemo_qt.po
poqm/nl/: rqbgdemo_qt.po
poqm/nn/: rqbgdemo_qt.po
poqm/pl/: rqbgdemo_qt.po
poqm/pt/: rqbgdemo_qt.po
poqm/pt_BR/: rqbgdemo_qt.po
poqm/ru/: rqbgdemo_qt.po
poqm/sk/: rqbgdemo_qt.po
poqm/sl/: rqbgdemo_qt.po
poqm/sv/: rqbgdemo_qt.po
poqm/tr/: rqbgdemo_qt.po
poqm/uk/: rqbgdemo_qt.po
poqm/x-test/: rqbgdemo_qt.po
poqm/zh_CN/: rqbgdemo_qt.po
poqm/zh_TW/: rqbgdemo_qt.po
rust_qt_binding_generator/: CMakeLists.txt  README.md  rust_qt_binding_generator.cpp
src/: CMakeLists.txt  Messages.sh  RMailObject.cpp  RMailObject.h  build.rs  configuration.rs  configuration_private.rs  cpp.cpp  cpp.h  cpp.rs  helper.cpp  helper.h  lib.rs  main.cpp  parseJson.cpp  parseJson.h  rust.cpp  rust.h  rust.rs  structs.h  tmp.cpp  util.rs
templates/qt_quick/: CMakeLists.txt  MainForm.ui.qml  README.md  main.qml
templates/qt_quick/rust/: Cargo.toml
templates/qt_quick/rust/src/: implementation.rs  interface.rs  lib.rs
templates/qt_quick/src/: Bindings.cpp  Bindings.h  main.cpp
templates/qt_quick_cargo/: Cargo.toml  README.md  bindings.json  build.rs
templates/qt_quick_cargo/src/: main.cpp  main.rs
templates/qt_widgets/: CMakeLists.txt  README.md  bindings.json
templates/qt_widgets/cmake/: FindCargo.cmake  FindRustQtBindingGenerator.cmake
templates/qt_widgets/rust/src/: interface.rs
templates/qt_widgets/src/: Bindings.cpp  main.cpp
templates/qt_widgets_cargo/: .gitignore  Cargo.toml  README.md  build.rs
templates/qt_widgets_cargo/src/: implementation.rs  main.cpp  main.rs  main.ui
tests/: CMakeLists.txt  test_functions.cpp  test_functions.json  test_functions_rust.cpp  test_functions_rust.h  test_list.cpp  test_list.json  test_list_rust.cpp  test_list_rust.h  test_list_types.cpp  test_list_types.json  test_list_types_rust.cpp  test_list_types_rust.h  test_object.cpp  test_object.json  test_object_rust.cpp  test_object_rust.h  test_object_types.cpp  test_object_types.json  test_object_types_rust.cpp  test_object_types_rust.h  test_objects.cpp  test_objects.json  test_objects_rust.cpp  test_objects_rust.h  test_tree.cpp  test_tree.json  test_tree_rust.cpp  test_tree_rust.h
tests/rust_functions/: Cargo.toml
tests/rust_functions/src/: implementation.rs  interface.rs
tests/rust_list/: Cargo.toml
tests/rust_list/src/: implementation.rs  interface.rs  lib.rs
tests/rust_list_types/: Cargo.toml
tests/rust_list_types/src/: implementation.rs  interface.rs
tests/rust_object/: Cargo.toml
tests/rust_object/src/: implementation.rs  interface.rs  lib.rs  types.rs
tests/rust_object_types/: Cargo.toml
tests/rust_object_types/src/: implementation.rs  interface.rs  types.rs
tests/rust_objects/: Cargo.toml
tests/rust_objects/src/: implementation.rs  interface.rs
tests/rust_tree/: Cargo.toml
tests/rust_tree/src/: implementation.rs  interface.rs
tutorial/: SUMMARY.md  book.toml  rust_qt_binding_generator.md  time_for_rust_and_qml.md
