[package]
name = "rust_qt_binding_generator"
version = "0.1.0"
authors = ["Jos van den Oever <jos@vandenoever.info>"]
description = "A proof-of-concept mail viewer writting with Qt using QML"
license = "AGPL-3.0-or-later"
documentation = "https://phabricator.kde.org/source/rust-qt-binding-generator/"
homepage = "https://phabricator.kde.org/source/rust-qt-binding-generator/"
repository = "https://anongit.kde.org/rust-qt-binding-generator"

[dependencies]
cc = { version = "1", features = ["parallel"] }
clap = "2"
regex= "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.2.1"
